# Kotlin_FFMpeg

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegsample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ffmpegsample/: FileUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpegsample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
